@@ -948,12 +948,13 @@ static const OptionInfo
     { "Kaiser", (ssize_t) KaiserFilter, MagickFalse },
     { "Lagrange", (ssize_t) LagrangeFilter, MagickFalse },
     { "Lanczos", (ssize_t) LanczosFilter, MagickFalse },
-    { "Lanczos2D", (ssize_t) Lanczos2DFilter, MagickTrue },
+    { "Lanczos2D", (ssize_t) Lanczos2DFilter, MagickFalse },
+    { "Lanczos2DSharp", (ssize_t) Lanczos2DSharpFilter, MagickTrue },
     { "Mitchell", (ssize_t) MitchellFilter, MagickFalse },
     { "Parzen", (ssize_t) ParzenFilter, MagickFalse },
     { "Point", (ssize_t) PointFilter, MagickFalse },
     { "Quadratic", (ssize_t) QuadraticFilter, MagickFalse },
-    { "Robidoux", (ssize_t) RobidouxFilter, MagickTrue },
+    { "Robidoux", (ssize_t) RobidouxFilter, MagickFalse },
     { "Sinc", (ssize_t) SincFilter, MagickFalse },
     { "SincFast", (ssize_t) SincFastFilter, MagickFalse },
     { "Triangle", (ssize_t) TriangleFilter, MagickFalse },
